# rexglue-sdk

./: .gitmodules  CMakeLists.txt  README.md  vcpkg.json
.github/workflows/: build-linux-amd64.yaml  build-win-amd64.yaml
cmake/: rexglueConfig.cmake.in
include/rex/: thread.h
include/rex/kernel/: kernel_state.h  xthread.h
include/rex/thread/: fiber.h
include/rex/time/: chrono.h  chrono_steady_cast.h
src/codegen/: builders.h  instruction_dispatch.cpp  recompiler.cpp
src/codegen/builders/: control_flow.cpp  helpers.h  logical.cpp  memory.cpp
src/core/: CMakeLists.txt  fiber_posix.cpp  fiber_win32.cpp  string.cpp  threading.cpp  utf8.cpp
src/graphics/: CMakeLists.txt
src/kernel/: kernel_state.cpp  runtime.cpp  xthread.cpp  xtimer.cpp
src/kernel/xboxkrnl/: xboxkrnl_rtl.cpp  xboxkrnl_threading.cpp
src/rexglue/: main.cpp
src/runtime/: CMakeLists.txt
src/ui/: CMakeLists.txt  imgui_drawer.cpp
tests/unit/: CMakeLists.txt
tests/unit/core/: chrono_test.cpp  fiber_test.cpp
